# robocup_navigation

./: .gitignore  CMakeLists.txt  README.md  package.xml
benchmark-planners/config/: benchmark.yaml
benchmark-planners/launch/: benchmark.launch.py
benchmark-planners/maps/: 100by100_10.yaml  100by100_20.yaml  rcll-2017-map-save.pgm  rcll-2017-map-save.yaml
benchmark-planners/scripts/: metric.py  process_data.py
benchmark/config/: benchmark.yaml
benchmark/maps/: 100by100_15.yaml
benchmark/results/: costmap.pickle  planners.pickle
benchmark/scripts/: metric.py  process_data.py
config/: a_star_planner.yaml  benchmark.yaml  mapper_params_online_async.yaml  mapper_params_online_async_robotino.yaml  merger_config.yaml  nav2_params.yaml  nav3_params.yaml  smac_2D_planner.yaml  smac_lattice_planner.yaml  smac_planner.yaml  theta_star_planner.yaml
include/robocup_navigation/: cpp_header.hpp
launch/: 1_amcl_nav.launch.py  1_gazebo.launch.py  1_multi_robo.launch.py  1_nav_robo.launch.py  aruco.launch.py  autostart.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  robotino_bringup.launch.py
rcll_sim/launch/: sim_launch.launch.py
rcll_sim/map/: map_save.pgm  map_save.yaml  test.data  (+2 more)
robocup_navigation/: camera_module.py  circle_module.py  detect_marker_module.py  flip_laser_module.py  follow_marker_mod.py  module_to_include.py  omnidrive_module.py  process_image.py
scripts/: camera.py  circle.py  detect_marker.py  flip_laser.py  follow_marker.py  nav_to_pose.py  omnidrive-old.py  omnidrive.py  py_node.py
src/: cpp_node.cpp
(+22 files in other folders)
